<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WooCommerce</string>
    <string name="notification_channel_general_title">General</string>
    <string name="notification_channel_general_id" content_override="true" translatable="false">wooandroid_notification_channel_general_id</string>
    <string name="notification_channel_order_title">New order alerts</string>
    <string name="notification_channel_order_id" content_override="true" translatable="false">wooandroid_notification_channel_order_id</string>
    <string name="notification_channel_review_title">Product review alerts</string>
    <string name="notification_channel_review_id" content_override="true" translatable="false">wooandroid_notification_channel_review_id</string>
    <string name="notification_order_ringtone_title" translatable="false">WooCommerce Cha-ching</string>
    <string name="notification_channel_pre_login_title">Login troubleshooting reminders</string>
    <string name="notification_channel_pre_login_id" content_override="true" translatable="false">wooandroid_notification_channel_pre_login_id</string>
    <string name="login_notification_channel_id" content_override="true" translatable="false">@string/notification_channel_general_id</string>
    <string name="all">All</string>
    <string name="logging_in">Logging in</string>
    <string name="loading_stores">Loading stores</string>
    <string name="signout">Log out</string>
    <string name="my_store">My store</string>
    <string name="orders">Orders</string>
    <string name="email_address">Email address</string>
    <string name="email">Email</string>
    <string name="currency_total">%1$s%2$s</string>
    <string name="currency_total_negative">-%1$s%2$s</string>
    <string name="order_total">Order total</string>
    <string name="shipping">Shipping</string>
    <string name="multiple_shipping">multiple shipping lines</string>
    <string name="edit">Edit</string>
    <string name="payment">Payment</string>
    <string name="taxes">Taxes</string>
    <string name="tax">Tax</string>
    <string name="subtotal">Subtotal</string>
    <string name="products_total">Products total</string>
    <string name="discount">Discount</string>
    <string name="details">Details</string>
    <string name="hide_details">Hide Details</string>
    <string name="retry">Retry</string>
    <string name="undo">Undo</string>
    <string name="install">Install</string>
    <string name="update_downloaded">Woo has downloaded an update</string>
    <string name="update_failed">Woo update has failed</string>
    <string name="continue_button">Continue</string>
    <string name="refresh_button">Refresh</string>
    <string name="untitled">Untitled</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_anyway">Cancel anyway</string>
    <string name="keep_editing">Keep editing</string>
    <string name="keep_changes">Keep changes</string>
    <string name="learn_more">Learn more</string>
    <string name="try_it_now">Try it now</string>
    <string name="set_up_now">Set up now</string>
    <string name="offline_message">Offline \u2014 using cached data</string>
    <string name="offline_error">Your network is unavailable. Check your data or wifi connection.</string>
    <string name="product">Product</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>
    <string name="discard">Discard</string>
    <string name="products">Products</string>
    <string name="refunds">Refunds</string>
    <string name="shipping_labels">Shipping Labels</string>
    <string name="product_variations">Variations</string>
    <string name="product_variation_options">%1$s (%2$s options)</string>
    <string name="product_variation_multiple_count">%1$s variations</string>
    <string name="product_variation_single_count">1 variation</string>
    <string name="product_variations_edit_attr">Edit attributes</string>
    <string name="product_variation_attributes">Attributes</string>
    <string name="product_add_attribute">Add attribute</string>
    <string name="product_new_attribute_name">New attribute name</string>
    <string name="product_rename_attribute">Rename attribute</string>
    <string name="product_rename_attribute_helper">Type of variation, eg. size or color</string>
    <string name="product_create_attribute_helper">To create a variation, you\'ll need to set its attributes (ie \"Color\", \"Size\") first</string>
    <string name="product_select_attribute">Or tap to select an existing attribute</string>
    <string name="product_new_attribute_term_name">Option name</string>
    <string name="product_select_attribute_term">Or tap to select an existing option</string>
    <string name="product_enter_attribute_term">Add each option name and press enter</string>
    <string name="product_attribute_name_already_exists">An attribute with this name already exists</string>
    <string name="product_any_attribute_hint">Any</string>
    <string name="product_term_name_already_exists">An option with this name already exists</string>
    <string name="product_attribute_error_renaming">Error while renaming your attribute</string>
    <string name="product_attributes_error_saving">Error while saving your attributes</string>
    <string name="product_attribute_remove">Remove this attribute?</string>
    <string name="review_notifications">Reviews</string>
    <string name="more_menu">Menu</string>
    <string name="more_menu_button_woo_admin">WooCommerce Admin</string>
    <string name="more_menu_button_wс_admin">WC Admin</string>
    <string name="more_menu_button_payments">Payments</string>
    <string name="more_menu_button_analytics">Analytics</string>
    <string name="more_menu_button_inbox">Inbox</string>
    <string name="more_menu_button_store">View Store</string>
    <string name="more_menu_button_coupons">Coupons</string>
    <string name="more_menu_button_reviews">Reviews</string>
    <string name="more_menu_avatar">User profile picture</string>
    <string name="version_with_name_param">Version %s</string>
    <string name="share_store_button">Share your store</string>
    <string name="share_store_dialog_title">Share your store\'s URL</string>
    <string name="emdash" translatable="false">\u2014</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="button_update_instructions">Update instructions</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_thanks">No thanks</string>
    <string name="apply">Apply</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="error_copy_to_clipboard">Error copying to clipboard</string>
    <string name="read_more">Read more</string>
    <string name="database_downgraded">Database downgraded, recreating tables and loading stores</string>
    <string name="button_not_now">Not now</string>
    <string name="unknown">Unknown</string>
    <string name="remove">Remove</string>
    <string name="rename">Rename</string>
    <string name="type">Type</string>
    <string name="try_again">Try again</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="discard_message">Do you want to discard your changes?</string>
    <string name="discard_images_message">Product images are still uploading. Do you want to discard your changes?</string>
    <string name="more_options">More options</string>
    <string name="value_not_set">Not set</string>
    <string name="selection_count">%d selected</string>
    <string name="please_wait">Please wait…</string>
    <string name="other">Other</string>
    <string name="free">free</string>
    <string name="and">and</string>
    <string name="generic_string" translatable="false">%s</string>
    <string name="error_required_field">Required field</string>
    <string name="analytics">Analytics</string>
    <string name="card">Card</string>
    <string name="cash">Cash</string>
    <string name="create">Create</string>
    <string name="exclusive_or">or</string>
    <string name="order_detail_edit_address_details_first_name">First name</string>
    <string name="order_detail_edit_address_details_last_name">Last name</string>
    <string name="order_detail_edit_address_details_email">Email</string>
    <string name="order_detail_edit_address_details_phone">Phone</string>
    <string name="order_detail_edit_address_company">Company</string>
    <string name="order_detail_edit_address_line1">Address 1</string>
    <string name="order_detail_edit_address_line2">Address 2</string>
    <string name="order_detail_edit_address_city">City</string>
    <string name="shipping_label_edit_address_state">State</string>
    <string name="shipping_label_edit_address_zip">Zip / Postal Code</string>
    <string name="shipping_label_edit_address_country">Country</string>
    <string name="product_weight">Weight</string>
    <string name="product_length">Length</string>
    <string name="product_width">Width</string>
    <string name="product_height">Height</string>
    <string name="product_shipping_class">Shipping class</string>
    <string name="product_view_in_store">View product on store</string>
    <string name="product_settings">Product settings</string>
    <string name="product_trash">Trash product</string>
    <string name="product_external_link">Product link</string>
    <string name="product_external_link_label">Enter the external URL to the product</string>
    <string name="product_external_link_button_text">Button text</string>
    <string name="product_external_link_button_text_label">This text will be shown on the button linking to the external product</string>
    <string name="product_detail_save_as_draft">Save as draft</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="beta_features">Beta features</string>
    <string name="settings_signout">Log out</string>
    <string name="settings_hiring">We\'re hiring!</string>
    <string name="settings_selected_store">Selected store</string>
    <string name="settings_notifs">Notifications</string>
    <string name="settings_notifs_device">Manage notifications</string>
    <string name="settings_notifs_device_detail">Sounds, urgency, and notification dot</string>
    <string name="settings_notifs_orders">Orders</string>
    <string name="settings_notifs_orders_detail">Get alerts when new orders come in</string>
    <string name="settings_notifs_tone">Tone</string>
    <string name="settings_notifs_tone_detail">Play Cha-Ching sound on new order</string>
    <string name="settings_notifs_reviews">Product reviews</string>
    <string name="settings_notifs_reviews_detail">Get alerts for new product reviews</string>
    <string name="settings_image_optimization_title">Image optimization</string>
    <string name="settings_image_optimization_message">Resize and compress images for faster uploading</string>
    <string name="settings_about">About the app</string>
    <string name="settings_licenses">Open source licenses</string>
    <string name="settings_app_theme_title">Appearance</string>
    <string name="settings_app_theme_option_default" translatable="false">@string/settings_app_theme_option_battery_saver</string>
    <string name="product_status_published">Published</string>
    <string name="product_status_privately_published">Privately published</string>
    <string name="product_status_pending">Pending review</string>
    <string name="product_status_draft">Draft</string>
    <string name="product_add_tool_bar_menu_button_done">Publish</string>
</resources>