<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_save"
        android:title="@string/save"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_publish"
        android:title="@string/product_add_tool_bar_menu_button_done"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_save_as_draft"
        android:title="@string/product_detail_save_as_draft"
        android:visible="false"
        app:showAsAction="withText" />

    <item
        android:id="@+id/menu_share"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="withText" />

    <item
        android:id="@+id/menu_view_product"
        android:title="@string/product_view_in_store"
        android:visible="false"
        app:showAsAction="withText" />

    <item
        android:id="@+id/menu_product_settings"
        android:title="@string/product_settings"
        app:showAsAction="withText" />

    <item
        android:id="@+id/menu_trash_product"
        android:title="@string/product_trash"
        android:visible="false"
        app:showAsAction="withText" />
</menu>
