<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--
        Primary store
    -->
    <com.google.android.material.textview.MaterialTextView
        style="@style/Woo.Settings.CategoryHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_selected_store"/>

    <com.woocommerce.android.ui.prefs.WCSettingsOptionValueView
        android:id="@+id/option_store"
        style="@style/Woo.Settings.Option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:optionTitle="testwooshop.mystagingwebsite.com"
        tools:optionValue="Woo Tester"/>

    <View
        style="@style/Woo.Divider"/>

    <!--
        Notifications (pre- API 26)
    -->
    <LinearLayout
        android:id="@+id/notifsContainerOlder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:visibility="visible">

        <com.google.android.material.textview.MaterialTextView
            style="@style/Woo.Settings.CategoryHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_notifs"/>

        <com.woocommerce.android.widgets.WCToggleSingleOptionView
            android:id="@+id/switchNotifsOrders"
            style="@style/Woo.Settings.Option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:switchSummary="@string/settings_notifs_orders_detail"
            app:switchTitle="@string/settings_notifs_orders"/>

        <com.woocommerce.android.widgets.WCToggleSingleOptionView
            android:id="@+id/switchNotifsTone"
            style="@style/Woo.Settings.Option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:switchSummary="@string/settings_notifs_tone_detail"
            app:switchTitle="@string/settings_notifs_tone"/>

        <com.woocommerce.android.widgets.WCToggleSingleOptionView
            android:id="@+id/switchNotifsReviews"
            style="@style/Woo.Settings.Option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:switchSummary="@string/settings_notifs_reviews_detail"
            app:switchTitle="@string/settings_notifs_reviews"/>
    </LinearLayout>

    <!--
        Notifications (API 26+)
    -->
    <com.woocommerce.android.ui.prefs.WCSettingsOptionValueView
        android:id="@+id/option_notifications"
        style="@style/Woo.Settings.Option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:optionTitle="@string/settings_notifs_device"
        app:optionValue="@string/settings_notifs_device_detail"/>

    <View
        style="@style/Woo.Divider"/>

    <!--
        Appearance (App Theme)
    -->
    <com.woocommerce.android.ui.prefs.WCSettingsOptionValueView
        android:id="@+id/option_theme"
        style="@style/Woo.Settings.Option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:optionTitle="@string/settings_app_theme_title"
        app:optionValue="@string/settings_app_theme_option_default"/>

    <View
        style="@style/Woo.Divider"/>

    <!--
        Privacy
    -->
    <com.woocommerce.android.ui.prefs.WCSettingsOptionValueView
        android:id="@+id/option_privacy"
        style="@style/Woo.Settings.Option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:optionTitle="@string/privacy_settings"/>

    <View
        style="@style/Woo.Divider"/>

    <!--
        Image Optimization
    -->
    <com.woocommerce.android.widgets.WCToggleSingleOptionView
        android:id="@+id/switchImageOptimizaton"
        style="@style/Woo.Settings.Option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:switchSummary="@string/settings_image_optimization_message"
        app:switchTitle="@string/settings_image_optimization_title"/>

    <View
        style="@style/Woo.Divider"/>

    <!--
        Beta Features
    -->
    <com.woocommerce.android.ui.prefs.WCSettingsOptionValueView
        android:id="@+id/option_beta_features"
        style="@style/Woo.Settings.Option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:optionTitle="@string/beta_features"/>

    <!--
        Feature Requests
    -->
    <com.woocommerce.android.ui.prefs.WCSettingsOptionValueView
        android:id="@+id/option_feature_request"
        style="@style/Woo.Settings.Option"
        android:layout_margin="@dimen/minor_00"
        android:padding="@dimen/major_100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:optionTitle="@string/feature_requests"/>

    <View
        style="@style/Woo.Divider"/>

    <!--
        About
    -->
    <com.google.android.material.textview.MaterialTextView
        style="@style/Woo.Settings.CategoryHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_about"/>

    <com.woocommerce.android.ui.prefs.WCSettingsOptionValueView
        android:id="@+id/option_about"
        style="@style/Woo.Settings.Option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:optionTitle="@string/app_name"/>

    <com.woocommerce.android.ui.prefs.WCSettingsOptionValueView
        android:id="@+id/option_licenses"
        style="@style/Woo.Settings.Option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:optionTitle="@string/settings_licenses"/>

    <View style="@style/Woo.Divider"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_option_logout"
        style="@style/Woo.Settings.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_signout"/>

    <View style="@style/Woo.Divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/major_100"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageHeart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:tint="@color/wc_purple"
        app:srcCompat="@drawable/ic_gridicons_heart_outline"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/settingsHiring"
            style="@style/Woo.Settings.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/major_200"
            android:paddingEnd="@dimen/major_100"
            android:text="@string/settings_hiring"
            tools:text="Made for love by Automattic. We're hiring!"/>
    </LinearLayout>
</LinearLayout>
