<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/sel_bottom_nav_dashboard"
        android:title="@string/my_store" />

    <item
        android:id="@+id/orders"
        android:icon="@drawable/sel_bottom_nav_orders"
        android:title="@string/orders" />

    <item
        android:id="@+id/products"
        android:icon="@drawable/sel_bottom_nav_products"
        android:title="@string/products" />

    <item
        android:id="@+id/point_of_sale"
        android:icon="@drawable/ic_menu_pos"
        android:title="@string/point_of_sale" />

    <item
        android:id="@+id/moreMenu"
        android:icon="@drawable/sel_bottom_nav_more"
        android:title="@string/more_menu" />
</menu>
