<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.woocommerce.android.ui.compose.designsystem.component.WooDesignSystemToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/woo_ds_toolbar_height"
        app:navigationIcon="@drawable/ic_back_24dp"
        tools:title="@string/app_name" />

    <com.woocommerce.android.widgets.WCElevatedLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckedTextView
            android:id="@+id/btnPublishedPrivately"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/minor_100"
            android:text="@string/product_status_privately_published"
            android:visibility="gone"
            tools:visibility="visible" />

        <CheckedTextView
            android:id="@+id/btnPublished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_status_published" />

        <View
            style="@style/Woo.Divider"
            android:layout_marginStart="@dimen/major_100" />

        <CheckedTextView
            android:id="@+id/btnDraft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_status_draft" />

        <View
            style="@style/Woo.Divider"
            android:layout_marginStart="@dimen/major_100" />

        <CheckedTextView
            android:id="@+id/btnPending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_status_pending" />
    </com.woocommerce.android.widgets.WCElevatedLinearLayout>
</LinearLayout>
