<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.woocommerce.android.widgets.WCElevatedLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/minor_100"
        android:orientation="vertical">

        <com.woocommerce.android.widgets.WCMaterialOutlinedEditTextView
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/major_100"
            android:layout_marginTop="@dimen/major_100"
            android:hint="@string/order_detail_edit_address_details_first_name"
            android:inputType="text"
            android:nextFocusForward="@id/last_name"
            app:errorEnabled="true" />

        <com.woocommerce.android.widgets.WCMaterialOutlinedEditTextView
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/major_100"
            android:hint="@string/order_detail_edit_address_details_last_name"
            android:inputType="text"
            android:nextFocusForward="@+id/email"
            app:errorEnabled="true" />

        <com.woocommerce.android.widgets.WCMaterialOutlinedEditTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/major_100"
            android:hint="@string/order_detail_edit_address_details_email"
            android:inputType="text"
            android:nextFocusForward="@+id/phone"
            app:errorEnabled="true" />

        <com.woocommerce.android.widgets.WCMaterialOutlinedEditTextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/major_100"
            android:hint="@string/order_detail_edit_address_details_phone"
            android:inputType="text"
            android:nextFocusForward="@+id/company"
            app:errorEnabled="true" />

        <com.woocommerce.android.widgets.WCMaterialOutlinedEditTextView
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/major_100"
            android:hint="@string/order_detail_edit_address_company"
            android:inputType="text"
            android:nextFocusForward="@+id/address1"
            app:errorEnabled="true" />

        <com.woocommerce.android.widgets.WCMaterialOutlinedEditTextView
            android:id="@+id/address1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/major_100"
            android:hint="@string/order_detail_edit_address_line1"
            android:inputType="text"
            android:nextFocusForward="@+id/address2"
            app:errorEnabled="true" />

        <com.woocommerce.android.widgets.WCMaterialOutlinedEditTextView
            android:id="@+id/address2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/major_100"
            android:hint="@string/order_detail_edit_address_line2"
            android:inputType="text"
            android:nextFocusForward="@+id/city"
            app:errorEnabled="true" />

        <com.woocommerce.android.widgets.WCMaterialOutlinedEditTextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_detail_edit_address_city"
            android:layout_marginHorizontal="@dimen/major_100"
            android:inputType="text"
            android:nextFocusForward="@+id/state"
            app:errorEnabled="true"/>

        <com.woocommerce.android.widgets.WCMaterialOutlinedSpinnerView
            android:id="@+id/countrySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/major_100"
            android:layout_marginTop="@dimen/minor_00"
            android:layout_marginEnd="@dimen/major_100"
            android:layout_marginBottom="@dimen/major_100"
            android:hint="@string/shipping_label_edit_address_country"
            android:inputType="text"
            android:nextFocusForward="@+id/useAddressAsIsButton"
            android:textAppearance="@style/TextAppearance.Woo.Caption" />

        <com.woocommerce.android.widgets.WCMaterialOutlinedEditTextView
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shipping_label_edit_address_state"
            android:layout_marginHorizontal="@dimen/major_100"
            android:inputType="text"
            android:nextFocusForward="@+id/zip"
            app:errorEnabled="true"/>

        <com.woocommerce.android.widgets.WCMaterialOutlinedSpinnerView
            android:id="@+id/stateSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/major_100"
            android:layout_marginTop="@dimen/minor_00"
            android:layout_marginEnd="@dimen/major_100"
            android:layout_marginBottom="@dimen/major_100"
            android:hint="@string/shipping_label_edit_address_state"
            android:inputType="text"
            android:nextFocusForward="@+id/zip"
            android:textAppearance="@style/TextAppearance.Woo.Caption" />

        <com.woocommerce.android.widgets.WCMaterialOutlinedEditTextView
            android:id="@+id/zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/major_100"
            android:inputType="text"
            android:hint="@string/shipping_label_edit_address_zip"
            android:nextFocusForward="@+id/countrySpinner"
            app:errorEnabled="true"/>

    </com.woocommerce.android.widgets.WCElevatedLinearLayout>

</ScrollView>
